--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../img/bg.jpg");
+  background-image: url("../img/background/background.jpg");
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
