--- a/css/app.css
+++ b/css/app.css
@@ -12,16 +12,15 @@ body {
 .contact {
   text-align: center;
 }
-.nav img {
-  max-width: 20px;
-}
 .card-container {
   display: inline-block;
   max-width: 300px;
   height: 500px;
 }
-.item-image{
-  max-height: 150px !important;
+.card-img-top{
+  height: 180px !important;
+  width: auto;
 }
+
 
 
